<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/mytoolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg"
        android:padding="8dp"
        tools:context="com.moysof.obo.SplashActivity" >

        <com.moysof.obo.typeface.TextLogo      android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sloganTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-24dp"
            android:text="@string/app_name"
            android:textColor="@color/green"
            android:textSize="150sp" />

        <com.moysof.obo.typeface.TextLogo      android:id="@+id/sloganTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:shadowColor="@android:color/black"
            android:shadowRadius="8"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/gray_about_bg"
            android:orientation="vertical"
            android:padding="8dp" >

            <com.moysof.obo.typeface.TextLogo          android:id="@+id/aboutTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/about_txt"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <com.moysof.obo.typeface.TextLogo          android:id="@+id/aboutLinkTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/about_link_txt"
                android:textColor="@color/green"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>