<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/mytoolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray" >

        <!-- The main content view -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_distance"
                        android:textColor="@color/gray_primary"
                        android:textSize="18sp" />

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_distance_desc"
                        android:textColor="@color/gray_secondary"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" >

                        <EditText
                            android:id="@+id/settingsEditTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/apptheme_edit_text_holo_light"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="5"
                            android:textColor="@color/green"
                            android:textSize="22sp" >

                            <requestFocus />
                        </EditText>

                        <com.moysof.obo.typeface.TextRobotoRegular
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="4dp"
                            android:text="@string/settings_distance_measurement"
                            android:textColor="@color/green"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/settings_wanted"
                        android:textColor="@color/gray_primary"
                        android:textSize="18sp" />

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_wanted_desc"
                        android:textColor="@color/gray_secondary"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/settingsRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/settingsRadioYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/apptheme_btn_check_holo_light"
                            android:checked="true"
                            android:text="@string/settings_wanted_yes"
                            android:textColor="@color/green" />

                        <RadioButton
                            android:id="@+id/settingsRadioNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:button="@drawable/apptheme_btn_check_holo_light"
                            android:text="@string/settings_wanted_no"
                            android:textColor="@color/green" />

                    </RadioGroup>

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/settings_msg"
                        android:textColor="@color/gray_primary"
                        android:textSize="18sp" />

                    <com.moysof.obo.typeface.TextRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_msg_desc"
                        android:textColor="@color/gray_secondary"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/settingsRadioGroupMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/settingsRadioMsgYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/apptheme_btn_check_holo_light"
                            android:checked="true"
                            android:text="@string/settings_wanted_yes"
                            android:textColor="@color/green" />

                        <RadioButton
                            android:id="@+id/settingsRadioMsgNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:button="@drawable/apptheme_btn_check_holo_light"
                            android:text="@string/settings_wanted_no"
                            android:textColor="@color/green" />
                    </RadioGroup>
                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_green_selector"
                android:clickable="true"
                android:onClick="about" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent" >

                    <com.moysof.obo.typeface.TextRobotoBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/settings_btn"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <com.moysof.obo.typeface.TextLogo
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1px"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        <!-- The navigation drawer -->

        <GridView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/gray_drawer"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>